salesforce-main/src/main/default/objects/Institute_Body__c/Institute_Body__c.object-meta.xml
<CustomObject>
    <description>Institute Bodies that a student is a member of</description>
    <label>Institute Body</label>
    <nameField>
        <displayFormat>IB{00000000}</displayFormat>
        <label>Institute Body ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Institute Bodies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>