salesforce-main/src/main/default/objects/Institute_Body__c/fields/Institute_Body__c.field-meta.xml
<CustomField>
    <fullName>Institute_Body__c</fullName>
    <description>Institute Body</description>
    <label>Institute Body</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AAT</fullName>
            </value>
            <value>
                <fullName>ACCA</fullName>
            </value>
            <value>
                <fullName>Apprenticeships</fullName>
            </value>
            <value>
                <fullName>ATT</fullName>
            </value>
            <value>
                <fullName>CBI</fullName>
            </value>
            <value>
                <fullName>CFA</fullName>
            </value>
            <value>
                <fullName>CII</fullName>
            </value>
            <value>
                <fullName>CIMA</fullName>
            </value>
            <value>
                <fullName>CIPD</fullName>
            </value>
            <value>
                <fullName>CISI</fullName>
            </value>
            <value>
                <fullName>CMI</fullName>
            </value>
            <value>
                <fullName>CTA</fullName>
            </value>
            <value>
                <fullName>CTI</fullName>
            </value>
            <value>
                <fullName>IAD</fullName>
            </value>
            <value>
                <fullName>ICAEW</fullName>
            </value>
            <value>
                <fullName>ICAS</fullName>
            </value>
            <value>
                <fullName>ICSA</fullName>
            </value>
            <value>
                <fullName>IMC</fullName>
            </value>
            <value>
                <fullName>Insolvency</fullName>
            </value>
            <value>
                <fullName>IOC</fullName>
            </value>
            <value>
                <fullName>ITP</fullName>
            </value>
            <value>
                <fullName>MRS</fullName>
            </value>
            <value>
                <fullName>PMI</fullName>
            </value>
            <value>
                <fullName>Association of Accounting Technicians</fullName>
                <isActive>false</isActive>
                <label>Association of Accounting Technicians</label>
            </value>
            <value>
                <fullName>Association of Chartered Certified Accountants</fullName>
                <isActive>false</isActive>
                <label>Association of Chartered Certified Accountants</label>
            </value>
            <value>
                <fullName>Association of Tax Technicians</fullName>
                <isActive>false</isActive>
                <label>Association of Tax Technicians</label>
            </value>
            <value>
                <fullName>CII Diploma in Regulated Financial Planning</fullName>
                <isActive>false</isActive>
                <label>CII Diploma in Regulated Financial Planning</label>
            </value>
            <value>
                <fullName>CISI Apprenticeship Programmes</fullName>
                <isActive>false</isActive>
                <label>CISI Apprenticeship Programmes</label>
            </value>
            <value>
                <fullName>CISI Capital Markets</fullName>
                <isActive>false</isActive>
                <label>CISI Capital Markets</label>
            </value>
            <value>
                <fullName>CISI Cert in Private Client Investment Advice&amp;Mgmt</fullName>
                <isActive>false</isActive>
                <label>CISI Cert in Private Client Investment Advice&amp;Mgmt</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>