salesforce-main/src/main/default/objects/Institute_Body__c/fields/Institute_Number__c.field-meta.xml
<CustomField>
    <fullName>Institute_Number__c</fullName>
    <description>Student&apos;s membership number of the institute body</description>
    <label>Institute Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>