salesforce-main/src/main/default/objects/Institute_Body__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <description>Student account that is a member of the professional body institution</description>
    <label>Student</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria.
Must be a student account</errorMessage>
        <filterItems>
            <field>Account.IsPersonAccount</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Institute Bodies</relationshipLabel>
    <relationshipName>Institute_Bodies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>